--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    我是谁
+<body style="background-color: blue; color: red;">
+    我是html页面
 </body>
 </html>
